--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
         include:
           - php: 8.0
             analysis: true
+          - php: 8.1
+            analysis: true
 
     steps:
       - name: Checkout
